CILIUM/cilium.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "clustermesh-ingress-l4-policy"
  # description: "demo: allow only employee to access protected-db"
spec:
  endpointSelector:
    matchLabels:
      io.kompose.service: pep-iot-agent
  ingress:
  - toPorts:
    - ports:
      - port: "8050"
        protocol: TCP
    fromEndpoints:
      - matchLabels:
          type: tfm
          tier: api
          k8s:io.kubernetes.pod.namespace: markl
      - matchLabels:
          type: tfm
          tier: api
          k8s:io.kubernetes.pod.namespace: extremis
